<feature> add historywindow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.spitchenko.appsgeyser">
+
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -17,7 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <service android:name=".mainwindow.controller.WordsIntentService"/>
+
+        <activity android:name=".historywindow.userinterface.HistoryActivity">
+        </activity>
     </application>
 
 </manifest>
