--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile "org.projectlombok:lombok:1.16.16"
-    compile 'com.ibm.watson.developer_cloud:java-sdk:3.7.2'
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'org.projectlombok:lombok:1.16.16'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.3.1'
+    testCompile 'junit:junit:4.12'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
 }
