--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ dependencies {
     compile 'org.projectlombok:lombok:1.16.16'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.google.firebase:firebase-core:11.0.1'
+    compile 'com.google.firebase:firebase-messaging:11.0.1'
     testCompile 'junit:junit:4.12'
     provided 'org.glassfish:javax.annotation:10.0-b28'
 }
+
+apply plugin: 'com.google.gms.google-services'
